--- a/process.ipynb
+++ b/process.ipynb
@@ -7902,10 +7902,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Thông tin xử lý:\n",
+      "Số cột đã xử lý: 40\n",
+      "\n",
+      "Tổng số tên không tìm thấy mapping: 6834\n",
+      "\n",
+      "Tổng số tên nan: 1359\n",
+      "\n",
+      "Mẫu dữ liệu sau khi xử lý:\n",
+      "   away_accurate_back_zone_pass  away_accurate_chipped_pass  \\\n",
+      "0                         173.0                        11.0   \n",
+      "1                         281.0                        23.0   \n",
+      "2                         160.0                        16.0   \n",
+      "3                         330.0                        13.0   \n",
+      "4                         235.0                        12.0   \n",
+      "\n",
+      "   away_accurate_corners_intobox  away_accurate_cross  \\\n",
+      "0                            4.0                  6.0   \n",
+      "1                            1.0                  4.0   \n",
+      "2                            NaN                  4.0   \n",
+      "3                            1.0                  4.0   \n",
+      "4                            NaN                  4.0   \n",
+      "\n",
+      "   away_accurate_cross_nocorner  away_accurate_flick_on  \\\n",
+      "0                           2.0                     1.0   \n",
+      "1                           3.0                     1.0   \n",
+      "2                           4.0                     NaN   \n",
+      "3                           3.0                     NaN   \n",
+      "4                           4.0                     NaN   \n",
+      "\n",
+      "   away_accurate_freekick_cross  away_accurate_fwd_zone_pass  \\\n",
+      "0                           1.0                        139.0   \n",
+      "1                           NaN                        215.0   \n",
+      "2                           NaN                        151.0   \n",
+      "3                           NaN                        166.0   \n",
+      "4                           NaN                        348.0   \n",
+      "\n",
+      "   away_accurate_goal_kicks  away_accurate_keeper_sweeper  ...  \\\n",
+      "0                       8.0                           NaN  ...   \n",
+      "1                       4.0                           NaN  ...   \n",
+      "2                       7.0                           1.0  ...   \n",
+      "3                      11.0                           1.0  ...   \n",
+      "4                       2.0                           NaN  ...   \n",
+      "\n",
+      "   home_starting_9_player_id  home_sub_1_player_id  home_sub_2_player_id  \\\n",
+      "0                   108936.0               20226.0               68987.0   \n",
+      "1                    98300.0                8264.0               11000.0   \n",
+      "2                    66104.0               14451.0               13703.0   \n",
+      "3                     9576.0               14428.0               10564.0   \n",
+      "4                    20607.0               66494.0               14716.0   \n",
+      "\n",
+      "   home_sub_3_player_id  home_sub_4_player_id  home_sub_5_player_id  \\\n",
+      "0               67221.0                3156.0                   NaN   \n",
+      "1                   NaN               53075.0                4864.0   \n",
+      "2               67776.0               14450.0                5682.0   \n",
+      "3              126789.0              134286.0              112589.0   \n",
+      "4               21585.0              114590.0               54312.0   \n",
+      "\n",
+      "   home_sub_6_player_id  home_sub_7_player_id  home_sub_8_player_id  \\\n",
+      "0                4845.0               71744.0               75381.0   \n",
+      "1               19723.0               51703.0               15212.0   \n",
+      "2               20486.0               19680.0              114566.0   \n",
+      "3              118112.0              112261.0               31936.0   \n",
+      "4               14446.0                6451.0                3905.0   \n",
+      "\n",
+      "   home_sub_9_player_id  \n",
+      "0               14824.0  \n",
+      "1               10768.0  \n",
+      "2               69914.0  \n",
+      "3               16256.0  \n",
+      "4                4815.0  \n",
+      "\n",
+      "[5 rows x 534 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Đọc file players để lấy mapping\n",
+    "players_df = pd.read_csv('data/data_csv/player/all_players_cleaned.csv')\n",
+    "# Tạo dictionary mapping từ tên sang player_id\n",
+    "name_to_id = dict(zip(players_df['name'], players_df['player_id']))\n",
+    "\n",
+    "# Đọc file matches\n",
+    "matches_df = pd.read_csv('data/data_csv/match/all_seasons_combined.csv')\n",
+    "\n",
+    "# Danh sách các cột cần chuyển đổi\n",
+    "columns_to_convert = [\n",
+    "    'away_starting_10_name', 'away_starting_11_name', 'away_starting_1_name', 'away_starting_2_name',\n",
+    "    'away_starting_3_name', 'away_starting_4_name', 'away_starting_5_name', 'away_starting_6_name',\n",
+    "    'away_starting_7_name', 'away_starting_8_name', 'away_starting_9_name', 'away_sub_1_name',\n",
+    "    'away_sub_2_name', 'away_sub_3_name', 'away_sub_4_name', 'away_sub_5_name', 'away_sub_6_name',\n",
+    "    'away_sub_7_name', 'away_sub_8_name', 'away_sub_9_name', 'home_starting_10_name', 'home_starting_11_name',\n",
+    "    'home_starting_1_name', 'home_starting_2_name', 'home_starting_3_name', 'home_starting_4_name',\n",
+    "    'home_starting_5_name', 'home_starting_6_name', 'home_starting_7_name', 'home_starting_8_name',\n",
+    "    'home_starting_9_name', 'home_sub_1_name', 'home_sub_2_name', 'home_sub_3_name', 'home_sub_4_name',\n",
+    "    'home_sub_5_name', 'home_sub_6_name', 'home_sub_7_name', 'home_sub_8_name', 'home_sub_9_name'\n",
+    "]\n",
+    "\n",
+    "# Tạo dictionary để lưu số lượng tên không tìm thấy cho mỗi cột\n",
+    "missing_names_count = {}\n",
+    "total_missing = 0\n",
+    "# Hàm chuyển đổi tên thành player_id\n",
+    "def convert_name_to_id(name, col_name):\n",
+    "    global total_missing\n",
+    "    if pd.isna(name):\n",
+    "        total_missing += 1\n",
+    "        return None\n",
+    "    if name not in name_to_id:\n",
+    "        missing_names_count[col_name] = missing_names_count.get(col_name, 0) + 1\n",
+    "        return None\n",
+    "    return name_to_id[name]\n",
+    "\n",
+    "# Áp dụng chuyển đổi cho các cột được chỉ định\n",
+    "for col in columns_to_convert:\n",
+    "    # Tạo tên cột mới (thay 'name' bằng 'player_id')\n",
+    "    new_col = col.replace('name', 'player_id')\n",
+    "    # Chuyển đổi và lưu vào cột mới\n",
+    "    matches_df[new_col] = matches_df[col].apply(lambda x: convert_name_to_id(x, col))\n",
+    "    # Xóa cột tên cũ\n",
+    "    matches_df = matches_df.drop(columns=[col])\n",
+    "\n",
+    "# Lưu kết quả\n",
+    "output_file = 'data/data_csv/match/all_matches_processed.csv'\n",
+    "matches_df.to_csv(output_file, index=False)\n",
+    "\n",
+    "# In thông tin về quá trình xử lý\n",
+    "print(\"\\nThông tin xử lý:\")\n",
+    "print(f\"Số cột đã xử lý: {len(columns_to_convert)}\")\n",
+    "# print(\"\\nSố lượng tên không tìm thấy mapping cho mỗi cột:\")\n",
+    "# for col, count in missing_names_count.items():\n",
+    "#     print(f\"{col}: {count} tên không tìm thấy\")\n",
+    "print(f\"\\nTổng số tên không tìm thấy mapping: {sum(missing_names_count.values())}\")\n",
+    "print(f\"\\nTổng số tên nan: {total_missing}\")\n",
+    "print(f\"\\nMẫu dữ liệu sau khi xử lý:\")\n",
+    "print(matches_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Thông tin xử lý:\n",
+      "Số cột đã xử lý: 22\n",
+      "\n",
+      "Tổng số tên không tìm thấy mapping: 3429\n",
+      "\n",
+      "Số dòng có tên không tìm thấy mapping: 1346\n",
+      "\n",
+      "Mẫu dữ liệu sau khi xử lý:\n",
+      "   away_accurate_back_zone_pass  away_accurate_chipped_pass  \\\n",
+      "0                         173.0                        11.0   \n",
+      "1                         281.0                        23.0   \n",
+      "2                         160.0                        16.0   \n",
+      "3                         330.0                        13.0   \n",
+      "4                         235.0                        12.0   \n",
+      "\n",
+      "   away_accurate_corners_intobox  away_accurate_cross  \\\n",
+      "0                            4.0                  6.0   \n",
+      "1                            1.0                  4.0   \n",
+      "2                            NaN                  4.0   \n",
+      "3                            1.0                  4.0   \n",
+      "4                            NaN                  4.0   \n",
+      "\n",
+      "   away_accurate_cross_nocorner  away_accurate_flick_on  \\\n",
+      "0                           2.0                     1.0   \n",
+      "1                           3.0                     1.0   \n",
+      "2                           4.0                     NaN   \n",
+      "3                           3.0                     NaN   \n",
+      "4                           4.0                     NaN   \n",
+      "\n",
+      "   away_accurate_freekick_cross  away_accurate_fwd_zone_pass  \\\n",
+      "0                           1.0                        139.0   \n",
+      "1                           NaN                        215.0   \n",
+      "2                           NaN                        151.0   \n",
+      "3                           NaN                        166.0   \n",
+      "4                           NaN                        348.0   \n",
+      "\n",
+      "   away_accurate_goal_kicks  away_accurate_keeper_sweeper  ...  \\\n",
+      "0                       8.0                           NaN  ...   \n",
+      "1                       4.0                           NaN  ...   \n",
+      "2                       7.0                           1.0  ...   \n",
+      "3                      11.0                           1.0  ...   \n",
+      "4                       2.0                           NaN  ...   \n",
+      "\n",
+      "   home_starting_11_player_id  home_starting_1_player_id  \\\n",
+      "0                      5793.0                    33245.0   \n",
+      "1                      8388.0                    51813.0   \n",
+      "2                     66204.0                    14548.0   \n",
+      "3                     12582.0                    13823.0   \n",
+      "4                      5220.0                   108922.0   \n",
+      "\n",
+      "   home_starting_2_player_id  home_starting_3_player_id  \\\n",
+      "0                    24252.0                    69176.0   \n",
+      "1                     8201.0                    13559.0   \n",
+      "2                     4936.0                    19620.0   \n",
+      "3                    33135.0                        NaN   \n",
+      "4                    14897.0                    49495.0   \n",
+      "\n",
+      "   home_starting_4_player_id  home_starting_5_player_id  \\\n",
+      "0                    14580.0                     9566.0   \n",
+      "1                        NaN                    10874.0   \n",
+      "2                    11419.0                    50234.0   \n",
+      "3                     4333.0                    24797.0   \n",
+      "4                    21737.0                     9662.0   \n",
+      "\n",
+      "   home_starting_6_player_id  home_starting_7_player_id  \\\n",
+      "0                        NaN                        NaN   \n",
+      "1                     4432.0                     8159.0   \n",
+      "2                    49481.0                     7975.0   \n",
+      "3                     4640.0                    66538.0   \n",
+      "4                     8707.0                    10079.0   \n",
+      "\n",
+      "   home_starting_8_player_id  home_starting_9_player_id  \n",
+      "0                    13565.0                   108936.0  \n",
+      "1                        NaN                    98300.0  \n",
+      "2                    15202.0                    66104.0  \n",
+      "3                     8143.0                     9576.0  \n",
+      "4                        NaN                    20607.0  \n",
+      "\n",
+      "[5 rows x 534 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Đọc file players để lấy mapping\n",
+    "players_df = pd.read_csv('data/data_csv/player/all_players_cleaned.csv')\n",
+    "# Tạo dictionary mapping từ tên sang player_id\n",
+    "name_to_id = dict(zip(players_df['name'], players_df['player_id']))\n",
+    "\n",
+    "# Đọc file matches\n",
+    "matches_df = pd.read_csv('data/data_csv/match/all_seasons_combined.csv')\n",
+    "\n",
+    "# Danh sách các cột cần chuyển đổi\n",
+    "columns_to_convert = [\n",
+    "    'away_starting_10_name', 'away_starting_11_name', 'away_starting_1_name', 'away_starting_2_name',\n",
+    "    'away_starting_3_name', 'away_starting_4_name', 'away_starting_5_name', 'away_starting_6_name',\n",
+    "    'away_starting_7_name', 'away_starting_8_name', 'away_starting_9_name', 'home_starting_10_name', 'home_starting_11_name',\n",
+    "    'home_starting_1_name', 'home_starting_2_name', 'home_starting_3_name', 'home_starting_4_name',\n",
+    "    'home_starting_5_name', 'home_starting_6_name', 'home_starting_7_name', 'home_starting_8_name',\n",
+    "    'home_starting_9_name'\n",
+    "]\n",
+    "\n",
+    "# Tạo dictionary để lưu số lượng tên không tìm thấy cho mỗi cột\n",
+    "missing_names_count = {}\n",
+    "rows_with_missing = set()  # Lưu index của các dòng có tên không tìm thấy\n",
+    "\n",
+    "# Hàm chuyển đổi tên thành player_id\n",
+    "def convert_name_to_id(name, col_name, idx):\n",
+    "    if pd.isna(name):\n",
+    "        return None\n",
+    "    if name not in name_to_id:\n",
+    "        if col_name not in missing_names_count:\n",
+    "            missing_names_count[col_name] = 0\n",
+    "        missing_names_count[col_name] += 1\n",
+    "        rows_with_missing.add(idx)  # Thêm index của dòng vào set\n",
+    "        return None\n",
+    "    return name_to_id[name]\n",
+    "\n",
+    "# Áp dụng chuyển đổi cho các cột được chỉ định\n",
+    "for col in columns_to_convert:\n",
+    "    # Tạo tên cột mới (thay 'name' bằng 'player_id')\n",
+    "    new_col = col.replace('name', 'player_id')\n",
+    "    # Chuyển đổi và lưu vào cột mới\n",
+    "    matches_df[new_col] = matches_df.apply(lambda row: convert_name_to_id(row[col], col, row.name), axis=1)\n",
+    "    # Xóa cột tên cũ\n",
+    "    matches_df = matches_df.drop(columns=[col])\n",
+    "\n",
+    "# Lưu kết quả\n",
+    "output_file = 'data/data_csv/match/all_matches_processed.csv'\n",
+    "matches_df.to_csv(output_file, index=False)\n",
+    "\n",
+    "# In thông tin về quá trình xử lý\n",
+    "print(\"\\nThông tin xử lý:\")\n",
+    "print(f\"Số cột đã xử lý: {len(columns_to_convert)}\")\n",
+    "# print(\"\\nSố lượng tên không tìm thấy mapping cho mỗi cột:\")\n",
+    "# for col, count in missing_names_count.items():\n",
+    "#     print(f\"{col}: {count} tên không tìm thấy\")\n",
+    "print(f\"\\nTổng số tên không tìm thấy mapping: {sum(missing_names_count.values())}\")\n",
+    "print(f\"\\nSố dòng có tên không tìm thấy mapping: {len(rows_with_missing)}\")\n",
+    "print(f\"\\nMẫu dữ liệu sau khi xử lý:\")\n",
+    "print(matches_df.head())"
+   ]
   }
  ],
  "metadata": {
